Added Overview, Prior Art, Timeline, Usage, and Evaluation sections to Mystic Card Forge (10/5/2025)

--- a/index.html
+++ b/index.html
@@ -449,6 +449,80 @@ Last update: 9/27/2025
         </div>
     </div>
 </div> <!-- End of Comments Tab -->
+<!-- Overview Tab -->
+<div id="overview" class="tab-panel">
+    <section class="bg-black bg-opacity-60 rounded-2xl p-8 mb-8">
+        <h2 class="text-3xl font-bold text-yellow-300 mb-4">Overview</h2>
+        <p class="text-gray-200 leading-relaxed text-lg">
+            Mystic Card Forge is an interactive AI-powered web app that lets users design, customize, and share
+            fantasy trading cards. The project merges creativity and machine learning, allowing users to generate card
+            ideas with AI, customize them manually, and save them to a community gallery for feedback and voting.
+        </p>
+        <p class="text-gray-400 italic mt-4">
+            Built using HTML, CSS, JavaScript, and a hosted backend (Render), it showcases my UAT AI and Software Engineering objectives.
+        </p>
+    </section>
+</div>
+
+<!-- Prior Art Tab -->
+<div id="prior-art" class="tab-panel">
+    <section class="bg-black bg-opacity-60 rounded-2xl p-8 mb-8">
+        <h2 class="text-3xl font-bold text-yellow-300 mb-4">Prior Art</h2>
+        <p class="text-gray-200 leading-relaxed text-lg">
+            Mystic Card Forge was inspired by collectible card games such as <em>Magic: The Gathering</em> and digital creation tools
+            like <em>Canva</em> and <em>Artbreeder</em>. However, none of these platforms allow full AI-driven generation and interactive
+            card management in one place. My app modernizes card creation with generative AI and community engagement.
+        </p>
+    </section>
+</div>
+
+<!-- Timeline Tab -->
+<div id="timeline" class="tab-panel">
+    <section class="bg-black bg-opacity-60 rounded-2xl p-8 mb-8">
+        <h2 class="text-3xl font-bold text-yellow-300 mb-4">Timeline</h2>
+        <ul class="list-disc list-inside text-gray-200 text-lg space-y-2">
+            <li><strong>Week 1:</strong> Designed initial UI and page layout.</li>
+            <li><strong>Week 2:</strong> Implemented AI generation and preview system.</li>
+            <li><strong>Week 3:</strong> Added gallery saving, voting, and localStorage support.</li>
+            <li><strong>Week 4:</strong> Recorded final demo, refined visuals, and finalized submission.</li>
+        </ul>
+    </section>
+</div>
+
+<!-- Usage Tab -->
+<div id="usage" class="tab-panel">
+    <section class="bg-black bg-opacity-60 rounded-2xl p-8 mb-8">
+        <h2 class="text-3xl font-bold text-yellow-300 mb-4">Usage</h2>
+        <ol class="list-decimal list-inside text-gray-200 text-lg space-y-2">
+            <li>Go to the <strong>Forge Card</strong> tab.</li>
+            <li>Enter a card concept or manually fill in card attributes (name, ability, mana, etc.).</li>
+            <li>Click <strong>AI Generate</strong> or upload your own image.</li>
+            <li>Preview your card instantly and click <strong>Save Card</strong> to add it to the gallery.</li>
+            <li>Visit the <strong>Gallery</strong> tab to vote on or delete your cards.</li>
+            <li>Engage with other users in the <strong>Community</strong> section.</li>
+        </ol>
+    </section>
+</div>
+
+<!-- Evaluation Tab -->
+<div id="evaluation" class="tab-panel">
+    <section class="bg-black bg-opacity-60 rounded-2xl p-8 mb-8">
+        <h2 class="text-3xl font-bold text-yellow-300 mb-4">Evaluation</h2>
+        <p class="text-gray-200 leading-relaxed text-lg">
+            Mystic Card Forge successfully integrates front-end design, AI generation, and user interaction. It demonstrates:
+        </p>
+        <ul class="list-disc list-inside text-gray-200 text-lg space-y-2 mt-3">
+            <li>Functional UI/UX with live previews and responsive layout.</li>
+            <li>AI integration using server-side API calls.</li>
+            <li>Persistent data with localStorage and dynamic rendering.</li>
+            <li>Community interaction through comments and voting.</li>
+        </ul>
+        <p class="text-gray-400 italic mt-4">
+            The project meets all UAT SIP409 requirements and demonstrates innovation in AI-assisted creativity.
+        </p>
+    </section>
+</div>
+
 <!-- Link to your JavaScript file -->
 <script src="app.js"></script>
 </body>
